--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,6 +1,13 @@
-<h1><%= User.find_by(id: params[:id]).f_name %> <%= User.find_by(id: params[:id]).l_name%></h1>
+<h1><%= @user.f_name %> <%= @user.l_name%></h1>
 
-<h3><%= User.find_by(id: params[:id]).role %></h3>
+<h3><%= @user.role %></h3>
+<br>
+<h5> In this service since: <%= @user.created_at.day %>.<%= @user.created_at.month %>.<%= @user.created_at.year %> </h5>
+
+<% if @user.role == 'freelancer' %>
+  <%= render "info" %>
+<% end %>
+
 
 <div class="container">
   
