--- a/app/views/registration/_form_modal.html.erb
+++ b/app/views/registration/_form_modal.html.erb
@@ -6,7 +6,7 @@
         <h5 class="modal-title" id="exampleModalLabel"> Registration </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-  <%= form_with model: @user, url: sign_up_path do |form| %>
+  <%= form_with model: @user, url: sign_up_path, method: :post do |form| %>
   <div class="modal-body">
     <% if form.object.errors.any? %>
       <div class="alert alert-danger">
@@ -40,11 +40,11 @@
     </div>
         <div class="form-group">
       <%= form.label 'Sex', class: "form-label mb-2 mt-3" %>
-      <%= form.select :sex, @users_sexes.each {|i| i}, include_blank: true %>
+      <%= form.select :sex, @sex_ar.each {|i| i}, include_blank: true %>
     </div>
         <div class="form-group">
       <%= form.label 'Role', class: "form-label mb-2 mt-3" %>
-      <%= form.select :role, @users_roles.each {|i| i}, include_blank: true %>  
+      <%= form.select :role, @rol_ar, include_blank: true %>  
     </div>
       <div class="modal-footer">
 
