--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,14 +2,16 @@
   <div class="container-fluid">
     <%# <%= link_to t('nav.home'), root_path, class: "navbar-brand"  %> 
     <%= link_to "Home", root_path, class: "navbar-brand"  %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%# <%= link_to t('nav.schedule'), schedule_path, class: "nav-link", id: 'schedule-btn' %>  
+        <li class="nav-item"> 
+          <%= link_to 'Freelancers', freela_list_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item"> 
+          <%= link_to 'Orders', order_list_path, class: "nav-link" %>
         </li>
       </ul>
 
@@ -17,7 +19,7 @@
 
         <% if Current.user.present? %>
           <li class="nav-item">
-            <%= link_to 'profile', profile_path(id: Current.user.id), class: "btn btn-outline-info", id: 'profile-btn' %>
+            <%= link_to 'profile', profile_path(id: Current.user.id), class: "btn btn-outline-info me-2", id: 'profile-btn' %>
           </li>
           <li class="nav-item">
             <%= button_to t('nav.logout'), logout_path, method: :delete,  class: "btn btn-outline-danger", id: 'logout-btn' %>
