add review button, fixed some bugs with unlogged users

--- a/app/views/order_list/index.html.erb
+++ b/app/views/order_list/index.html.erb
@@ -2,15 +2,19 @@
 <p>Find me in app/views/order_list/index.html.erb</p>
 
 <% @orders.each do |i| %>
-<div class="card">
-  <div class="card-body">
-  <h5 class="card-title"><%= i.title %> </h5>
-  <p class="card-text">Cost: <%= i.cost %></p>
-  <div calss="card-text">
-  <%= i.message[0..100]... %>
-  </div>
-    <%= link_to 'Show details', ord_prof_path(id: i.id), class:"btn btn-primary" %>
-  </div>
-</div>
-<br>
+  <% if i.freelanc_id.nil? %>
+    <div class="card">
+      <div class="card-body">
+      <h5 class="card-title"><%= i.title %> </h5>
+      <p class="card-text">Cost: <%= i.cost %></p>
+      <div calss="card-text">
+      <%= i.message[0..100]... %>
+      </div>
+        <%= link_to 'Show details', ord_prof_path(id: i.id), class:"btn btn-primary" %>
+      </div>
+    </div>
+    <br>
+
+  <% end %>
+
 <% end %>
