--- a/app/views/order_prof/index.html.erb
+++ b/app/views/order_prof/index.html.erb
@@ -16,28 +16,30 @@
 <br>
 <br>
 
-<% if @cur_user.role == 'freelancer' && PreOrder.where(freelancer_id: @cur_user.freelancers.first.id).count.zero? && @order.freelanc_id.nil?%>
-  <%= button_to "Take", order_sub_path(order_id: @order.id, freelancer_id: (@cur_user.freelancers.first.id), id: params[:id]), method: :post, class:"btn btn-outline-success" %>
-<% end %>
-
-<% if @order.client == @cur_user.clients.first %>
-  <%# <%= button_to "look", ord_prof_show_path , method: :post, class:"btn btn-outline-success"  %>
-    <%= form_with method: :post, url: ord_prof_show_path(id: @order.id) do |form| %>
-
-      <div class="form-group">
-        <%= form.submit "Edit", class:"btn btn-primary"%>
-      </div>
-      
+<% unless Current.user.nil? %>
+  <% if @cur_user.role == 'freelancer' && PreOrder.where(freelancer_id: @cur_user.freelancers.first.id).count.zero? && @order.freelanc_id.nil?%>
+    <%= button_to "Take", order_sub_path(order_id: @order.id, freelancer_id: (@cur_user.freelancers.first.id), id: params[:id]), method: :post, class:"btn btn-outline-success" %>
   <% end %>
-<% end %>
 
-<% if @order.client == @cur_user.clients.first %>
-    <%= form_with method: :post, url: ord_prof_freel_path(id: @order.id) do |form| %>
+  <% if @order.client == @cur_user.clients.first %>
+    <%# <%= button_to "look", ord_prof_show_path , method: :post, class:"btn btn-outline-success"  %>
+      <%= form_with method: :post, url: ord_prof_show_path(id: @order.id) do |form| %>
 
-      <div class="form-group">
-        <%= form.submit "Check Freelancers", class:"btn btn-primary"%>
-      </div>
-      
+        <div class="form-group">
+          <%= form.submit "Edit", class:"btn btn-primary"%>
+        </div>
+        
+      <% end %>
+  <% end %>
+
+  <% if @order.client == @cur_user.clients.first %>
+      <%= form_with method: :post, url: ord_prof_freel_path(id: @order.id) do |form| %>
+
+        <div class="form-group">
+          <%= form.submit "Check Freelancers", class:"btn btn-primary"%>
+        </div>
+        
+    <% end %>
   <% end %>
 <% end %>
 
