--- a/app/views/profile/_info.html.erb
+++ b/app/views/profile/_info.html.erb
@@ -1,5 +1,6 @@
 <div id="info">
 <%= form_with do |form| %>
+
   <div class="modal-body">
 
     <div class="form-group">
@@ -32,15 +33,15 @@
   </div>
 <%end%>
 
+  <% unless Current.user.nil? %>
+    <% if Current.user.id == @user.id %>
+      <%= form_with method: :post, url: profile_edit_path(id: params[:id]) do |form| %>
 
-  <% if Current.user.id == @user.id %>
-    <%= form_with method: :post, url: profile_edit_path(id: params[:id]) do |form| %>
+        <div class="form-group">
+          <%= form.submit "Edit", class:"btn btn-primary"%>
+        </div>
+    <% end %>
+  <%end%>
 
-      <div class="form-group">
-        <%= form.submit "Edit", class:"btn btn-primary"%>
-      </div>
+
   <% end %>
-
-  </div>
-<%end%>
-</div>
