--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -2,10 +2,14 @@
 
 <h3><%= @user.role %></h3>
 <br>
+<div class="progress">
+  <div class="progress-bar bg-success" role="progressbar" style="width: <%= 25 %>%" aria-valuenow=" <%= 25 %> " aria-valuemin="0" aria-valuemax="100"></div> 
+</div>
+
 <h5> In this service since: <%= @user.created_at.day %>.<%= @user.created_at.month %>.<%= @user.created_at.year %> </h5>
 
 <div>
-  <% if Current.user.role == 'client' %>
+  <% if Current.user.role == 'client' %><div>
     <%= form_with method: :post, url: add_review_path(id: params[:id]) do |form| %>
 
       <div class="form-group">
