--- a/app/views/profile/_cl_info.html.erb
+++ b/app/views/profile/_cl_info.html.erb
@@ -1,3 +1,10 @@
+
+
+<%= form_with method: :post, url: new_order_path do |form| %>
+  <%= form.submit "New Order", class:"btn btn-success" %>
+<% end %>
+
+
 <div id="info">
 <%= form_with do |form| %>
   <div class="modal-body">
