--- a/app/views/profile/_info.html.erb
+++ b/app/views/profile/_info.html.erb
@@ -1,3 +1,7 @@
+  <div class="progress">
+    <div class="progress-bar bg-success" role="progressbar" style="width: <%= 25 %>%" aria-valuenow=" <%= 25 %> " aria-valuemin="0" aria-valuemax="100"></div> 
+  </div>
+
 <div id="info">
 <%= form_with do |form| %>
 
