--- a/app/views/profile/_info.html.erb
+++ b/app/views/profile/_info.html.erb
@@ -1,6 +1,8 @@
+  <br>
   <div class="progress">
-    <div class="progress-bar bg-success" role="progressbar" style="width: <%= 25 %>%" aria-valuenow=" <%= 25 %> " aria-valuemin="0" aria-valuemax="100"></div> 
+    <div class="progress-bar bg-success" role="progressbar" style="width: <%= @adr_marks %>%" aria-valuenow=" <%= @adr_marks %> " aria-valuemin="0" aria-valuemax="100"></div> 
   </div>
+  <br>
 
 <div id="info">
 <%= form_with do |form| %>
