--- a/app/views/order_list/_filtered.html.erb
+++ b/app/views/order_list/_filtered.html.erb
@@ -1,16 +1,5 @@
-<h1>OrderList#index</h1>
-<p>Find me in app/views/order_list/index.html.erb</p>
-
-<%#= @orders.find_all{|i| i.message.include?'Ruby'} %>
-<%#= @orders.where("message LIKE :search", search: "%Ruby%").first.title %>
-  <%= form_with method: :post, url: searching_url do |form| %>
-        <%= form.text_field :search_param, placeholder: 'ruby', class: 'form-control'%>
-        <%= form.submit class: 'btn btn-primary mb-3' %>
-  <% end %>
-
-
-<div id='result_searching'>
-  <% @orders.each do |i| %>
+<%= turbo_frame_tag :result_searching, target: :_top do %>
+  <% @array_of_searching.each do |i| %>
     <% if i.freelanc_id.nil? %>
       <div class="card">
         <div class="card-body">
@@ -28,4 +17,4 @@
     <% end %>
 
   <% end %>
-</div>
+<% end %>
